Java version update, added usage of Virtual Threads