@@ -1,15 +1,16 @@
-# spring-hazelcast-competing consumers
+# Competing Consumers pattern with Spring Boot and Hazelcast Demo project
 
-- Spring Boot version: 3.0.6
-- Java version: 17
+## Tech-stack
+- Spring Boot version: 3.1.1-SNAPSHOT
+- Hazelcast version: 5.2.1
+- Java version: 20 (need `--enable-preview` for Virtual Threads)
 - Build tool: Maven
-
-
-## build
-
-
-## run
-
+- Docker 
 
 ## References
+- https://www.enterpriseintegrationpatterns.com/patterns/messaging/CompetingConsumers.html
+- https://learn.microsoft.com/en-us/azure/architecture/patterns/competing-consumers
+- https://docs.hazelcast.com/hazelcast/5.3/data-structures/queue
+- https://docs.hazelcast.com/management-center/5.3/getting-started/get-started
+- https://codecentric.github.io/chaos-monkey-spring-boot/latest/
 
